fix: put model behind other elements

--- a/frontend/src/styles/modules/Index.module.scss
+++ b/frontend/src/styles/modules/Index.module.scss
@@ -67,7 +67,7 @@
 .model {
 	width: 100vw;
 	height: 100vh;
-	z-index: 99;
+	z-index: -9;
 
 	@include breakpoint-range($from: mobile) {
 		display: none;
